--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSetting": {
+    "Token": "OlU[1h>t;§5jWFOyZW%DB%vBtybh9kVYDR8|WW#8EA:~k9a<~fGe§*u:Ix;8Y}=G"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-TSGNVR2B\\SQLEXPRESS;Initial Catalog=datingapp;Integrated Security=True"
   },
